Refactor notification service and update compatibility report
- Simplified stream operations in NotificationService and PreferenceService by replacing collect(Collectors.toList()) with toList().
- Extracted WebSocket publishing logic into a separate method in InAppNotificationStrategy for better readability.
- Updated compatibility report for the notification service to reflect full compatibility with the e-banking system.
- Minor formatting adjustments in event classes for consistency.